dist_man1_MANS=

if BUILD_GERANIUMD
  dist_man1_MANS+=geraniumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=geranium-qt.1
endif

if BUILD_GERANIUM_CLI
  dist_man1_MANS+=geranium-cli.1
endif

if BUILD_GERANIUM_TX
  dist_man1_MANS+=geranium-tx.1
endif

if ENABLE_WALLET
if BUILD_GERANIUM_WALLET
  dist_man1_MANS+=geranium-wallet.1
endif
endif
